o JDK 1.4 compatibility.
git-svn-id: http://svn.jdtaus.org/svnroot/jdtaus/jdtaus-core/branches/jdtaus-core-1.x@8508 d3f52c91-230f-0410-802c-e3ec080d4bae